# mcp-server-starrocks

./: Dockerfile  README.md  RELEASE_NOTES.md  build_image.sh  pyproject.toml
src/mcp_server_starrocks/: __init__.py  server.py
